<resources>

    <string-array name="category">
        <item>Art</item>
        <item>Business</item>
        <item>Education</item>
        <item>Finance</item>
        <item>Fitness</item>
        <item>Lifestyle</item>
        <item>Literature</item>
        <item>Music</item>
        <item>Photography</item>
        <item>Shopping</item>
        <item>Social</item>
        <item>Sport</item>
        <item>Technology</item>
        <item>Travel</item>
    </string-array>
    <string name="newest">newest</string>
    <string name="oldest">oldest</string>
    <string name="likes">likes</string>
    <string name="app_name">IDEAS HUB</string>

    <string name="sign_up_text">sign up</string>
    <string name="log_in_text">log in</string>
    <string name="back_text">back</string>
    <string name="username_text">Username</string>
    <string name="phone_number_text">Phone Number</string>
    <string name="phone_number_hint">(XXX) \u002D XXX \u002D XXXX</string>
    <string name="new_username">New username</string>
    <string name="email">Email</string>
    <string name="password_text">Password</string>
    <string name="confirm_password_text">Confirm password</string>
    <string name="email_text">Email@sjsu.edu</string>
    <string name="Phone_number_text">Phone number</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="my_info">My Information</string>
    <string name="my_ideas">My Ideas</string>
    <string name="my_saved_ideas">My Saved Ideas</string>
    <string name="account_setting">Account Setting</string>
    <string name="ideas_title">Title</string>
    <string name="ideas_content">Content</string>
    <string name="close">Cancel</string>
    <string name="save">save</string>
    <string name="category">Category</string>
    <string name="google_sign_in">Sign in with Google</string>
    <string name="google_log_out">Logout</string>

    <!--test trings-->
    <string name="title">Quodsi vultum tibi, si incessum fingeres, quo gravior viderere, non esses tui similis; At hoc in eo M.</string>
    <string name="date">Feb 01, 2017</string>
    <string name="type">Business</string>
    <string name="summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eadem fortitudinis ratio reperietur. Haec quo modo conveniant, non sane intellego. Dolere malum est: in crucem qui agitur, beatus esse non potest. Duo Reges: constructio interrete.</string>
    <string name="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eadem fortitudinis ratio reperietur. Haec quo modo conveniant, non sane intellego. Dolere malum est: in crucem qui agitur, beatus esse non potest. Duo Reges: constructio interrete.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eadem fortitudinis ratio reperietur. Haec quo modo conveniant, non sane intellego. Dolere malum est: in crucem qui agitur, beatus esse non potest. Duo Reges: constructio interrete. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eadem fortitudinis ratio reperietur. Haec quo modo conveniant, non sane intellego. Dolere malum est: in crucem qui agitur, beatus esse non potest. Duo Reges: constructio interrete. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eadem fortitudinis ratio reperietur. Haec quo modo conveniant, non sane intellego. Dolere malum est: in crucem qui agitur, beatus esse non potest. Duo Reges: constructio interrete. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eadem fortitudinis ratio reperietur. Haec quo modo conveniant, non sane intellego. Dolere malum est: in crucem qui agitur, beatus esse non potest. Duo Reges: constructio interrete. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eadem fortitudinis ratio reperietur. Haec quo modo conveniant, non sane intellego. Dolere malum est: in crucem qui agitur, beatus esse non potest. Duo Reges: constructio interrete.</string>
    <string name="like">100</string>
    <string name="comments">Comments</string>
    <string name="pass_string">*********</string>
    <string name="email_string">doe.john@sjsu.edu</string>
    <string name="user_string">johndoe</string>
    <string name="author_string">\u0040 johndoe</string>
    <string name="phone_string">(408) \- 123 \- 4567</string>
    <string name="comment_string">this is a comment...</string>
    <string name="message">message showing here</string>

    <!--error messages-->
    <string name="url_null">urlString null</string>
    <string name="input_stream_reader_null">inputStreamReader null</string>
    <string name="buffer_reader_null">buffer reader null</string>
    <string name="inputstream_null">inputstream null</string>
    <string name="string_null"> null</string>
</resources>
