<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context="com.example.android.svce.activities.Login">

    <LinearLayout
        android:id="@+id/login_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:orientation="vertical"
        android:padding="@dimen/login_side"
        android:gravity="center_vertical|center">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            style="@style/edit_text_style"
            android:hint="@string/username_text"
            android:layout_marginBottom="@dimen/four_dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            style="@style/edit_text_style"
            android:hint="@string/password_text"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            style="@style/edit_text_style"
            android:hint="@string/confirm_password_text"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            style="@style/edit_text_style"
            android:hint="@string/email_text"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            style="@style/edit_text_style"
            android:hint="@string/Phone_number_text"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.10"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back_button"
            style="@style/login_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/two_dp"
            android:layout_marginStart="@dimen/four_dp"
            android:layout_weight="0.5"
            android:text="@string/back_text" />

        <Button
            android:id="@+id/signup_button"
            style="@style/login_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/four_dp"
            android:layout_marginStart="@dimen/two_dp"
            android:layout_weight="0.5"
            android:text="@string/sign_up_text" />

    </LinearLayout>
</LinearLayout>
