<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="LoginViewModel"
            type="com.example.android.svce.model.viewModel.LoginViewModel"/>
    </data>
<LinearLayout
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.example.android.svce.activities.Login">

    <LinearLayout
        android:id="@+id/login_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:orientation="vertical"
        android:padding="@dimen/login_side"
        android:gravity="center_vertical|center">

        <EditText
            android:id="@+id/username_edittext"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            style="@style/edit_text_style"
            android:hint="@string/username_text"
            android:layout_marginBottom="@dimen/four_dp"/>
        <EditText
            android:id="@+id/password_edittext"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            style="@style/edit_text_style"
            android:hint="@string/password_text"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/emptyview"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.05"
        android:background="@color/dark_gray"
        android:orientation="vertical">
        <TextView
            android:id="@+id/emptyview_message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/message"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/four_dp"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.08"
        android:orientation="horizontal"
        android:background="@color/black">

        <Button
            android:id="@+id/signup_button"
            style="@style/login_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/two_dp"
            android:layout_marginStart="@dimen/four_dp"
            android:layout_weight="0.5"
            android:text="@string/sign_up_text" />

        <Button
            android:id="@+id/login_button"
            style="@style/login_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/four_dp"
            android:layout_marginStart="@dimen/two_dp"
            android:layout_weight="0.5"
            android:text="@string/log_in_text" />

    </LinearLayout>
</LinearLayout>
</layout>