<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_new_idea"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/eight_dp"
    tools:context="com.example.android.svce.activities.AddNewIdea"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ideas_title"
        android:textSize="16sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/gray_border"
        android:gravity="top"
        android:textSize="14sp"
        android:padding="@dimen/four_dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ideas_content"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@drawable/gray_border"
        android:gravity="top"
        android:textSize="14sp"
        android:padding="@dimen/four_dp"
        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical|center">
            <TextView
                android:id="@+id/close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/close"
                android:layout_marginEnd="@dimen/sixteen_dp"
                android:textColor="@color/active_icon"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/save"
                android:layout_marginEnd="@dimen/sixteen_dp"
                android:textColor="@color/active_icon"
                android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
