<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context="com.example.android.svce.activities.IdeaDetailsActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/eight_dp"
        android:layout_marginTop="@dimen/eight_dp"
        android:background="@color/light_gray"
        android:orientation="vertical"
        android:paddingBottom="@dimen/eight_dp">

        <!--details -->
        <LinearLayout
            android:id="@+id/detail_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingEnd="@dimen/eight_dp"
            android:paddingStart="@dimen/eight_dp"
            android:layout_marginBottom="@dimen/eight_dp">

            <TextView
                android:id="@+id/ideas_detail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/eight_dp"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/eight_dp"
                android:layout_marginStart="@dimen/eight_dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ideas_detail_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/sixteen_dp"
                    android:text="@string/author_string"
                    android:textColor="@color/dark_gray"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/ideas_detail_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/sixteen_dp"
                    android:text="@string/date"
                    android:textColor="@color/dark_gray"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/ideas_detail_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/sixteen_dp"
                    android:text="@string/type"
                    android:textColor="@color/dark_gray"
                    android:textSize="14dp" />

            </LinearLayout>


            <TextView
                android:id="@+id/ideas_detail_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/eight_dp"
                android:text="@string/content"
                android:textColor="@color/black"
                android:textSize="16sp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/eight_dp"
                android:layout_marginStart="@dimen/eight_dp"
                android:layout_marginTop="@dimen/eight_dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">


               <ImageView
                   android:id="@+id/like_ic"
                   android:layout_width="20dp"
                   android:layout_height="20dp"
                   android:src="@drawable/like"
                   android:layout_marginEnd="@dimen/sixteen_dp"/>

                <TextView
                    android:id="@+id/like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/like"/>



            </LinearLayout>


        </LinearLayout>

        <!--comments-->
        <LinearLayout
            android:id="@+id/comment_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingEnd="@dimen/eight_dp"
            android:paddingStart="@dimen/eight_dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/eight_dp"
                android:paddingBottom="@dimen/eight_dp"
                android:text="@string/comments"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <!--comment box-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:layout_marginEnd="@dimen/four_dp"
                    android:hint="@string/comments" />
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/send" />
            </LinearLayout>
            <!--sample for comments list item-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:minHeight="50dp"
                android:background="@color/white"
                android:layout_marginTop="@dimen/four_dp"
                android:layout_marginBottom="@dimen/four_dp">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/eight_dp"
                    android:text="@string/author_string"
                    android:layout_marginTop="@dimen/four_dp"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/eight_dp"
                    android:text="@string/comment_string"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/light_gray"/>

            </LinearLayout>

            <!--sample for comments list item-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:minHeight="50dp"
                android:background="@color/white"
                android:layout_marginTop="@dimen/four_dp"
                android:layout_marginBottom="@dimen/four_dp">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/eight_dp"
                    android:text="@string/author_string"
                    android:layout_marginTop="@dimen/four_dp"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/eight_dp"
                    android:text="@string/comment_string"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/light_gray"/>

            </LinearLayout>


        </LinearLayout>
    </LinearLayout>


</ScrollView>